--- a/eudevfin/cdf-wrapper/src/main/resources/org/devgateway/eudevfin/reports/aq/aq_master_bilateral_toa_year.jrxml
+++ b/eudevfin/cdf-wrapper/src/main/resources/org/devgateway/eudevfin/reports/aq/aq_master_bilateral_toa_year.jrxml
@@ -9,7 +9,7 @@
 	<parameter name="SUBDIR_PATH" class="java.lang.String"/>
 	<queryString language="mdx">
 		<![CDATA[SELECT
-NON EMPTY {[Type of Aid].[Budget support en], [Type of Aid].[Core contributions and pooled programmes and funds en], [Type of Aid].[Project-type interventions en], [Type of Aid].[Experts and other technical assistance en], [Type of Aid].[Debt relief en], [Type of Aid].[Administrative costs not included elsewhere en]} ON ROWS,
+NON EMPTY {[Type of Aid].[Budget support en], [Type of Aid].[Core contributions and pooled programmes and funds en], [Type of Aid].[Project-type interventions en], [Type of Aid].[Experts and other technical assistance en], [Type of Aid].[Debt relief en], [Type of Aid].[Administrative costs not included elsewhere en], [Type of Aid].[Other in-donor expenditures en], [Type of Aid].[Scholarships and student costs in donor countries en]} ON ROWS,
 NON EMPTY {[Measures].[Commitments Amount]} ON COLUMNS
 FROM [Financial]
 WHERE {[Reporting Year].[$P{FIRST_YEAR}]}*{[BiMultilateral].[Bilateral en]}]]>
@@ -31,6 +31,12 @@ WHERE {[Reporting Year].[$P{FIRST_YEAR}]}*{[BiMultilateral].[Bilateral en]}]]>
 	</field>
 	<field name="Administrative costs not included elsewhere" class="java.lang.Number">
 		<fieldDescription><![CDATA[Data([Measures].[Commitments Amount], [Type of Aid].[Administrative costs not included elsewhere en])]]></fieldDescription>
+	</field>
+	<field name="Other in-donor expenditures" class="java.lang.Number">
+		<fieldDescription><![CDATA[Data([Measures].[Commitments Amount], [Type of Aid].[Other in-donor expenditures en])]]></fieldDescription>
+	</field>
+	<field name="Scholarships and student costs in donor countries" class="java.lang.Number">
+		<fieldDescription><![CDATA[Data([Measures].[Commitments Amount], [Type of Aid].[Scholarships and student costs in donor countries en])]]></fieldDescription>
 	</field>
 	<background>
 		<band splitType="Stretch"/>
@@ -185,17 +191,22 @@ WHERE {[Reporting Year].[$P{FIRST_YEAR}]}*{[BiMultilateral].[Bilateral en]}]]>
 				<textFieldExpression><![CDATA[$F{Administrative costs not included elsewhere}]]></textFieldExpression>
 			</textField>
 			<subreport>
-				<reportElement x="455" y="28" width="100" height="84" uuid="f1671a23-5b09-4b8f-9c89-d83e08f246f7"/>
+				<reportElement x="455" y="0" width="100" height="112" uuid="f1671a23-5b09-4b8f-9c89-d83e08f246f7"/>
 				<subreportParameter name="YEAR">
 					<subreportParameterExpression><![CDATA[$P{SECOND_YEAR}]]></subreportParameterExpression>
 				</subreportParameter>
 				<subreportParameter name="MONDRIAN_CONNECTION">
 					<subreportParameterExpression><![CDATA[$P{MONDRIAN_CONNECTION}]]></subreportParameterExpression>
 				</subreportParameter>
-				<subreportExpression>
-				  <![CDATA[JasperCompileManager.compileReport($P{SUBDIR_PATH} + "/aq_master_bilateral_toa_year_b.jrxml")]]>
-				</subreportExpression>
+				<subreportExpression><![CDATA[JasperCompileManager.compileReport($P{SUBDIR_PATH} + "/aq_master_bilateral_toa_year_b.jrxml")]]></subreportExpression>
 			</subreport>
+			<textField>
+				<reportElement x="352" y="0" width="100" height="14" uuid="e1f921d3-1870-4d74-ad55-80c4f2ae0902"/>
+				<textElement textAlignment="Right">
+					<font fontName="Arial"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$F{Budget Support}+$F{Core contributions and pooled programmes and funds}+$F{Project-type interventions}+$F{Experts and other technical assistance}+$F{Debt Relief}+$F{Administrative costs not included elsewhere}+$F{Other in-donor expenditures}+$F{Scholarships and student costs in donor countries}]]></textFieldExpression>
+			</textField>
 		</band>
 	</pageHeader>
 	<columnHeader>
