--- a/eudevfin/cdf-wrapper/src/main/resources/org/devgateway/eudevfin/reports/aq/aq_master_bilateral_toa_year_b.jrxml
+++ b/eudevfin/cdf-wrapper/src/main/resources/org/devgateway/eudevfin/reports/aq/aq_master_bilateral_toa_year_b.jrxml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="report1" language="groovy" pageWidth="100" pageHeight="84" columnWidth="100" leftMargin="0" rightMargin="0" topMargin="0" bottomMargin="0" uuid="4d81083f-52a3-45df-97af-b93a485e497a">
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="report1" language="groovy" pageWidth="100" pageHeight="112" columnWidth="100" leftMargin="0" rightMargin="0" topMargin="0" bottomMargin="0" uuid="4d81083f-52a3-45df-97af-b93a485e497a">
 	<property name="ireport.callouts" value="##Mon Dec 30 08:46:00 ART 2013"/>
 	<property name="ireport.zoom" value="1.0"/>
 	<property name="ireport.x" value="0"/>
@@ -7,7 +7,7 @@
 	<parameter name="YEAR" class="java.lang.String"/>
 	<queryString language="mdx">
 		<![CDATA[SELECT
-NON EMPTY {[Type of Aid].[Budget support en], [Type of Aid].[Core contributions and pooled programmes and funds en], [Type of Aid].[Project-type interventions en], [Type of Aid].[Experts and other technical assistance en], [Type of Aid].[Debt relief en], [Type of Aid].[Administrative costs not included elsewhere en]} ON ROWS,
+NON EMPTY {[Type of Aid].[Budget support en], [Type of Aid].[Core contributions and pooled programmes and funds en], [Type of Aid].[Project-type interventions en], [Type of Aid].[Experts and other technical assistance en], [Type of Aid].[Debt relief en], [Type of Aid].[Administrative costs not included elsewhere en], [Type of Aid].[Other in-donor expenditures en], [Type of Aid].[Scholarships and student costs in donor countries en]} ON ROWS,
 NON EMPTY {[Measures].[Commitments Amount]} ON COLUMNS
 FROM [Financial]
 WHERE {[Reporting Year].[$P{YEAR}]}*{[BiMultilateral].[Bilateral en]}]]>
@@ -30,52 +30,65 @@ WHERE {[Reporting Year].[$P{YEAR}]}*{[BiMultilateral].[Bilateral en]}]]>
 	<field name="Administrative costs not included elsewhere" class="java.lang.Number">
 		<fieldDescription><![CDATA[Data([Measures].[Commitments Amount], [Type of Aid].[Administrative costs not included elsewhere en])]]></fieldDescription>
 	</field>
+	<field name="Other in-donor expenditures" class="java.lang.Number">
+		<fieldDescription><![CDATA[Data([Measures].[Commitments Amount], [Type of Aid].[Other in-donor expenditures en])]]></fieldDescription>
+	</field>
+	<field name="Scholarships and student costs in donor countries" class="java.lang.Number">
+		<fieldDescription><![CDATA[Data([Measures].[Commitments Amount], [Type of Aid].[Scholarships and student costs in donor countries en])]]></fieldDescription>
+	</field>
 	<background>
 		<band splitType="Stretch"/>
 	</background>
 	<pageHeader>
-		<band height="84" splitType="Stretch">
+		<band height="112" splitType="Stretch">
 			<textField>
-				<reportElement x="0" y="0" width="100" height="14" uuid="402fbca1-4c96-4301-99f4-308ff9db3d65"/>
+				<reportElement x="0" y="28" width="100" height="14" uuid="402fbca1-4c96-4301-99f4-308ff9db3d65"/>
 				<textElement textAlignment="Right">
 					<font fontName="Arial"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{Budget Support}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="0" y="28" width="100" height="14" uuid="bbe205f1-1a6f-4118-972b-9433246f5cef"/>
+				<reportElement x="0" y="56" width="100" height="14" uuid="bbe205f1-1a6f-4118-972b-9433246f5cef"/>
 				<textElement textAlignment="Right">
 					<font fontName="Arial"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{Project-type interventions}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="0" y="14" width="100" height="14" uuid="302d1a5d-bce7-4523-98e9-cf32d10d2cbd"/>
+				<reportElement x="0" y="42" width="100" height="14" uuid="302d1a5d-bce7-4523-98e9-cf32d10d2cbd"/>
 				<textElement textAlignment="Right">
 					<font fontName="Arial"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{Core contributions and pooled programmes and funds}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="0" y="42" width="100" height="14" uuid="4a437cb0-f281-439b-97e0-05342b00e2bd"/>
+				<reportElement x="0" y="70" width="100" height="14" uuid="4a437cb0-f281-439b-97e0-05342b00e2bd"/>
 				<textElement textAlignment="Right">
 					<font fontName="Arial"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{Experts and other technical assistance}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="0" y="56" width="100" height="14" uuid="e0a83df2-75a9-456e-8392-dcf6903affd5"/>
+				<reportElement x="0" y="84" width="100" height="14" uuid="e0a83df2-75a9-456e-8392-dcf6903affd5"/>
 				<textElement textAlignment="Right">
 					<font fontName="Arial"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{Debt Relief}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="0" y="70" width="100" height="14" uuid="56ac8011-2c10-4539-8169-1dccdb239435"/>
+				<reportElement x="0" y="98" width="100" height="14" uuid="56ac8011-2c10-4539-8169-1dccdb239435"/>
 				<textElement textAlignment="Right">
 					<font fontName="Arial"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{Administrative costs not included elsewhere}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="0" y="0" width="100" height="14" uuid="6e45c865-46ad-4215-a3d8-59da67b98978"/>
+				<textElement textAlignment="Right">
+					<font fontName="Arial"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$F{Budget Support}+$F{Core contributions and pooled programmes and funds}+$F{Project-type interventions}+$F{Experts and other technical assistance}+$F{Debt Relief}+$F{Administrative costs not included elsewhere}+$F{Other in-donor expenditures}+$F{Scholarships and student costs in donor countries}]]></textFieldExpression>
 			</textField>
 		</band>
 	</pageHeader>
