--- a/eudevfin/cdf-wrapper/src/main/resources/org/devgateway/eudevfin/reports/aq/aq_master_memo_sector_year.jrxml
+++ b/eudevfin/cdf-wrapper/src/main/resources/org/devgateway/eudevfin/reports/aq/aq_master_memo_sector_year.jrxml
@@ -4,25 +4,21 @@
 	<property name="ireport.zoom" value="1.0"/>
 	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
-	<parameter name="YEAR" class="java.lang.String"/>
+	<parameter name="FIRST_YEAR" class="java.lang.String"/>
+	<parameter name="SECOND_YEAR" class="java.lang.String"/>
+	<parameter name="SUBDIR_PATH" class="java.lang.String"/>
 	<queryString language="mdx">
 		<![CDATA[SELECT
-NON EMPTY {[Type of Aid].[Budget support en], [Type of Aid].[Core contributions and pooled programmes and funds en], [Type of Aid].[Project-type interventions en], [Type of Aid].[Experts and other technical assistance en], [Type of Aid].[Debt relief en], [Type of Aid].[Administrative costs not included elsewhere en]} ON ROWS,
+NON EMPTY {[Sector].[Humanitarian Aid],[Sector].[Development food aid]} ON ROWS,
 NON EMPTY {[Measures].[Commitments Amount]} ON COLUMNS
 FROM [Financial]
-WHERE {[Reporting Year].[2010]}*{[BiMultilateral].[Bilateral en]}]]>
+WHERE {[Reporting Year].[$P{FIRST_YEAR}]}*{[BiMultilateral].[Bilateral en]}]]>
 	</queryString>
-	<field name="Budget Support" class="java.lang.Number">
-		<fieldDescription><![CDATA[Data([Measures].[Commitments Amount], [Type of Aid].[Budget support en])]]></fieldDescription>
+	<field name="Humanitarian Aid" class="java.lang.Number">
+		<fieldDescription><![CDATA[Data([Measures].[Commitments Amount], [Sector].[Humanitarian Aid])]]></fieldDescription>
 	</field>
-	<field name="Core contributions and pooled programmes and funds" class="java.lang.Number">
-		<fieldDescription><![CDATA[Data([Measures].[Commitments Amount], [Type of Aid].[Core contributions and pooled programmes and funds en])]]></fieldDescription>
-	</field>
-	<field name="Project-type interventions" class="java.lang.Number">
-		<fieldDescription><![CDATA[Data([Measures].[Commitments Amount], [Type of Aid].[Project-type interventions en])]]></fieldDescription>
-	</field>
-	<field name="Experts and other technical assistance" class="java.lang.Number">
-		<fieldDescription><![CDATA[Data([Measures].[Commitments Amount], [Type of Aid].[Experts and other technical assistance en])]]></fieldDescription>
+	<field name="Development food aid" class="java.lang.Number">
+		<fieldDescription><![CDATA[Data([Measures].[Commitments Amount], [Sector].[Development food aid])]]></fieldDescription>
 	</field>
 	<background>
 		<band splitType="Stretch"/>
@@ -55,14 +51,14 @@ WHERE {[Reporting Year].[2010]}*{[BiMultilateral].[Bilateral en]}]]>
 				<textElement textAlignment="Right">
 					<font fontName="Arial"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$F{Budget Support}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{Humanitarian Aid}]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement x="352" y="28" width="100" height="14" uuid="4150ac15-ec14-4e02-86b2-98311846b6bd"/>
 				<textElement textAlignment="Right">
 					<font fontName="Arial"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$F{Core contributions and pooled programmes and funds}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{Development food aid}]]></textFieldExpression>
 			</textField>
 			<staticText>
 				<reportElement x="297" y="14" width="50" height="14" uuid="fc907d23-3983-433c-880b-17a19161b374"/>
@@ -78,20 +74,16 @@ WHERE {[Reporting Year].[2010]}*{[BiMultilateral].[Bilateral en]}]]>
 				</textElement>
 				<text><![CDATA[060]]></text>
 			</staticText>
-			<textField>
-				<reportElement x="455" y="28" width="100" height="14" uuid="7d60e276-ff2c-450d-848f-5d70ba1f4bfc"/>
-				<textElement textAlignment="Right">
-					<font fontName="Arial"/>
-				</textElement>
-				<textFieldExpression><![CDATA[$F{Core contributions and pooled programmes and funds}]]></textFieldExpression>
-			</textField>
-			<textField>
-				<reportElement x="455" y="14" width="100" height="14" uuid="f1ffaaac-92d9-4513-b9b5-7c5b5b7b87de"/>
-				<textElement textAlignment="Right">
-					<font fontName="Arial"/>
-				</textElement>
-				<textFieldExpression><![CDATA[$F{Budget Support}]]></textFieldExpression>
-			</textField>
+			<subreport>
+				<reportElement x="455" y="14" width="100" height="28" uuid="f1671a23-5b09-4b8f-9c89-d83e08f246f7"/>
+				<subreportParameter name="YEAR">
+					<subreportParameterExpression><![CDATA[$P{SECOND_YEAR}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="MONDRIAN_CONNECTION">
+					<subreportParameterExpression><![CDATA[$P{MONDRIAN_CONNECTION}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportExpression><![CDATA[JasperCompileManager.compileReport($P{SUBDIR_PATH} + "/aq_master_memo_sector_year_b.jrxml")]]></subreportExpression>
+			</subreport>
 		</band>
 	</pageHeader>
 	<columnHeader>
