dim: change fields design to reposition when others are hidden

--- a/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/desktop/components/SearchBoxPanel.html
+++ b/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/desktop/components/SearchBoxPanel.html
@@ -15,14 +15,15 @@
 
 </head>
 <body>
-	<wicket:panel>
-		<div class="search-box-panel ">
-			
-			<div wicket:id="search-box" />
-		</div>
-		<div wicket:id="search-results-panel-wrapper">
-			<div wicket:id="search-results-panel" />
-		</div>
-	</wicket:panel>
+<wicket:panel>
+    <div class="search-box-panel ">
+        <div class="row">
+            <div wicket:id="search-box"/>
+        </div>
+    </div>
+    <div wicket:id="search-results-panel-wrapper">
+        <div wicket:id="search-results-panel"/>
+    </div>
+</wicket:panel>
 </body>
 </html>
