--- a/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/desktop/components/PersistedUserGroupTableListPanel.html
+++ b/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/desktop/components/PersistedUserGroupTableListPanel.html
@@ -5,17 +5,25 @@
   ~ are made available under the terms of the GNU Public License v3.0
   ~ which accompanies this distribution, and is available at
   ~ http://www.gnu.org/licenses/gpl.html
+  ~
+  ~ Contributors:
+  ~    Mihai
   -->
-
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:wicket="http://wicket.apache.org">
 <body>
 <wicket:extend>
+        	<thead>
+	           <tr>
+	               <th>Group name</th>	           	    
+	           </tr>
 
-  <div class="container">
-		<div class="row">
-			<div class="span10 offset1 well" wicket:id="listPanel"></div>
-		</div>
-	</div>
+            </thead>
+			<tr wicket:id="groupList">
+				<td>
+				<a wicket:id="linkToEditUserGroup"/>
+				</td>
+
+			</tr>
 </wicket:extend>
 </body>
-</html>                                                   
+</html>
