--- a/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/desktop/components/PersistedUserTableListPanel.html
+++ b/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/desktop/components/PersistedUserTableListPanel.html
@@ -7,7 +7,7 @@
   ~ http://www.gnu.org/licenses/gpl.html
   ~
   ~ Contributors:
-  ~    Alex
+  ~    Mihai
   -->
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:wicket="http://wicket.apache.org">
 <body>
