--- a/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/desktop/components/PersistedUserTableListPanel.html
+++ b/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/desktop/components/PersistedUserTableListPanel.html
@@ -14,9 +14,9 @@
 <wicket:extend>
         	<thead>
 	           <tr>
-	               <th>User name</th>	           	    
-	               <th>Groups</th>	           
-	               <th>Authorities</th>	           
+	               <th><wicket:message key="user.name"/></th>
+				   <th><wicket:message key="groups"/></th>	               	           	    
+	               <th><wicket:message key="authorities"/></th>	               
 	           </tr>
 
             </thead>
